# deployment

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  PROJECT_PLAN.md  README.md  pyproject.toml  requirements-dev.txt  requirements.md  setup.py
docs/: README.md  coding_standards.md  development_setup.md  documentation_template.md
docs/command_reference/: README.md
docs/configuration/: README.md
docs/deployment/: local.md
docs/server/: README.md  admin_guide.md  troubleshooting.md  user_guide.md
docs/troubleshooting/: README.md
docs/user_guide/: README.md
installer_venv/: pyvenv.cfg
installer_venv/Scripts/: activate  activate.bat
pythonweb_env/: pyvenv.cfg
pythonweb_env/Scripts/: activate  activate.bat
pythonweb_installer/: __init__.py  cli.py  config.py  database.py  installer.py  server.py  templates.py  utils.py
pythonweb_installer/database/: __init__.py  connection.py  data.py  initialization.py  migrations.py  schema.py
pythonweb_installer/dependencies/: __init__.py  packages.py  resolution.py
pythonweb_installer/environment/: __init__.py  validation.py  variables.py  virtualenv.py
pythonweb_installer/repository/: __init__.py  auth.py  clone.py  version.py
pythonweb_installer/server/: __init__.py  config.py  performance.py  security.py  startup.py  wsgi.py
pythonweb_installer/templates/: __init__.py  apache.conf.j2  asgi.py.j2  engine.py  gunicorn.conf.py.j2  management.py  nginx.conf.j2  start_apache.sh.j2  start_gunicorn.sh.j2  start_nginx.sh.j2  (+4 more)
scripts/: __init__.py  setup_dev_env.py
tests/: __init__.py  conftest.py
(+44 files in other folders)
